# CameraPerfKPI

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/prateekdas1991/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  full_overlay_logger.cpp
app/src/main/java/io/github/prateekdas1991/: MainActivity.kt  OverlayWriter.kt  StopwatchOverlayService.kt
app/src/main/java/io/github/prateekdas1991/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/prateekdas1991/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
